--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -242,3 +242,26 @@ shop-pay-button {
     @apply bg-background text-foreground;
   }
 }
+
+
+/* /
+SWIPER
+*/
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+}
+
+.swiper-pagination-fraction, .swiper-pagination-custom, .swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal{
+   bottom:2rem;
+}
